<resources>
    <string name="app_name">CalChooChoo</string>
    <string name="arrive_by">Arrive By</string>
    <string name="depart_at">Depart At</string>
    <string name="previous_day">previous day</string>
    <string name="next_day">next day</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="search_for_stop"><i>Search for a stop</i></string>
    <string name="where_to_go"><i>Where do you want to go?</i></string>
    <string name="where_from"><i>Where are you coming from?</i></string>
    <string name="where_catch"><i>What train do you want to catch?</i></string>
    <string name="stop">Stop</string>
    <string name="miles">mi</string>
    <string name="no_matching_stops">Sorry, no stops match your search.</string>
    <string name="zone">Zone</string>
    <string name="link">Link</string>
    <string name="map_link">Map Link</string>
    <string name="go_to">Go To</string>
    <string name="leave_from">Leave From</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="to_lower">to</string>
    <string name="arriving">Arriving</string>
    <string name="departing">Departing</string>
    <string name="reset_to_today">Reset to today</string>
    <string name="select_stops">Please select the stops you want to travel between.</string>
    <string name="bullet_train">Bullet Train</string>
    <string name="local_train">Local Train</string>
    <string name="train_number">Train #</string>
    <string name="no_more_trains">Sorry, there are no more trips at this time.</string>
    <string name="south">South</string>
    <string name="north">North</string>
    <string name="number_sign">#</string>
    <string name="trains_seen">Trains seen after</string>
    <string name="san_jose">San Jose</string>
    <string name="san_francisco">San Francisco</string>
    <string name="image_direction_arrow">Select to switch train direction</string>
    <string name="calchoochoo_logo">CalChooChoo logo</string>
    <string name="calchoochoo_schedule">Schedule from April 10, 2017</string>
    <string name="map_search">Map Search</string>
    <string name="trip_explorer">Trip Explorer</string>
    <string name="caltrain_news">Caltrain News</string>
    <string name="about_calchoochoo">About CalChooChoo</string>

    <string name="transition_train_image">transition-train-image</string>
    <string name="transition_train_number_text">transition-train-number-text</string>
    <string name="transition_train_number">transition-train-number</string>

    <string name="notification_for_train_num">Notifications For Train #</string>
    <string name="notification_departure">Departure notification</string>
    <string name="notification_arriving">Arrival notification</string>
    <string name="before">before</string>
    <string name="notifications_saved">Your trip notifications have been saved.</string>
    <string name="notifications_removed">Your trip notifications have been removed.</string>
    <string name="menu_calchoochoo">CalChooChoo Menu</string>
    <string name="change_details">Change trip details</string>
    <string name="northbound_to_sf">North bound trains to San Francisco</string>
    <string name="southbound_to_sanjose">South bound trains to San Jose</string>

    <string-array name="minutes">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>25 min</item>
        <item>30 min</item>
    </string-array>
</resources>
