<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activityDrawerTop"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#9e9e9e">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/calchoochoo_logo"
            android:padding="10dp"
            android:src="@drawable/ic_cal_choo_choo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#88FF5722">
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/cardview_light_background"
                android:textSize="32sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calchoochoo_schedule"
                android:textColor="@color/cardview_light_background"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/activityDrawerMapSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/ic_explore_black_24dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/map_search"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/activityDrawerTripExplorer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/ic_event_black_24dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/trip_explorer"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/activityDrawerNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/ic_chrome_reader_mode_black_24dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/caltrain_news"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/activityDrawerAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/ic_train_black_24dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/about_calchoochoo"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>