<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".fragments.TripFilterTimeAndMethodDialogFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/timeTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:tabBackground="?attr/colorPrimary"
        app:tabTextColor="@color/cardview_light_background"
        app:tabSelectedTextColor="@color/cardview_light_background"
        app:tabIndicatorColor="@color/primary_text_material_light">

        <android.support.design.widget.TabItem
            android:id="@+id/methodArriveTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/arrive_by"/>

        <android.support.design.widget.TabItem
            android:id="@+id/methodDepartTab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/depart_at"/>

    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:id="@+id/picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeTabs"
        android:gravity="center"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner">
        </TimePicker>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/picker"
        android:background="@color/secondary_text_material_dark"/>

    <LinearLayout
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picker"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/leftDateButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/previous_day"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:tint="?android:attr/textColorPrimary"/>

        <com.eleith.calchoochoo.utils.InfinitePager
            android:id="@+id/dateSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"/>

        <ImageButton
            android:id="@+id/rightDateButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/next_day"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:tint="?android:attr/textColorPrimary"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/datePicker"
        android:background="@color/secondary_text_material_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datePicker"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/departOrArriveCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="?attr/colorAccent"/>

        <Button
            android:id="@+id/departOrArriveSelect"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="?attr/colorAccent"/>

    </LinearLayout>

</RelativeLayout>
