<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:clipToPadding="false"
             android:elevation="5dp"
             tools:context="com.eleith.calchoochoo.fragments.TripFilterFragment">

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            android:gravity="end"
            android:labelFor="@+id/trip_filter_source"
            android:padding="12dp"
            android:text="@string/from"
            android:textColor="?android:colorBackground"
            android:textSize="18sp"/>

        <EditText
            android:id="@id/trip_filter_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:focusable="false"
            android:hint="@string/search_for_stop"
            android:textColor="?android:colorBackground"
            android:textColorHint="?android:colorBackground"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_refresh_black_24dp"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:gravity="end"
            android:labelFor="@+id/trip_filter_destination"
            android:padding="12dp"
            android:text="@string/to"
            android:textColor="?android:colorBackground"
            android:textSize="18sp"/>

        <EditText
            android:id="@id/trip_filter_destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:focusable="false"
            android:hint="@string/search_for_stop"
            android:textColor="?android:colorBackground"
            android:textColorHint="?android:colorBackground"
            android:visibility="invisible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/trip_filter_method_arriving"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2.2"
            android:gravity="end"
            android:padding="12dp"
            android:text="@string/arriving"
            android:textColor="?android:colorBackground"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/trip_filter_method_departing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2.2"
            android:gravity="end"
            android:labelFor="@+id/trip_filter_datetime"
            android:padding="12dp"
            android:text="@string/departing"
            android:textColor="?android:colorBackground"
            android:textSize="18sp"/>

        <EditText
            android:id="@id/trip_filter_datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:focusable="false"
            android:inputType="text"
            android:textColor="?android:colorBackground"
            android:textColorHint="?android:colorBackground"/>

        <ImageView
            android:id="@+id/trip_filter_refresh_date"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/reset_to_today"
            android:src="@drawable/ic_restore_black_24dp"
            />
    </TableRow>

</TableLayout>
