<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card="http://schemas.android.com/apk/res-auto"
                                    xmlns:map="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="10dp"
                                    android:elevation="2dp"
                                    card:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stop_card_stop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textColor="?android:colorBackground"
            android:textSize="22sp"
            tools:text="name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zone"
                android:textColor="?android:colorBackground"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/stop_card_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:colorBackground"
                android:textSize="14sp"
                tools:text="5"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:colorBackground"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/stop_card_go_to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="20dp"
                android:text="@string/go_to"
                android:textColor="?android:colorBackground"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/stop_card_leave_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/stop_card_go_to"
                android:layout_toStartOf="@id/stop_card_map_to"
                android:text="@string/leave_from"
                android:textColor="?android:colorBackground"
                android:textSize="16sp"
                />

            <ImageView
                android:id="@+id/stop_card_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/link"
                android:src="@drawable/ic_link_black_24dp"
                android:textColor="?android:colorBackground"/>

            <ImageView
                android:id="@+id/stop_card_map_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@id/stop_card_link"
                android:contentDescription="@string/map_link"
                android:src="@drawable/ic_room_black_24dp"
                android:textColor="?android:colorBackground"/>

        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
